crates/test-files/fixtures/compile_errors/trait_fn_with_generic_params.fe
trait Bar {}

trait Foo {
    fn generic_fn<T: Bar>(self, val: T);
}
